turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:7: error: ';' expected but '=' found.
val GAUCHE=2=
            ^